--- a/cssCode/mainStyle.css
+++ b/cssCode/mainStyle.css
@@ -327,7 +327,27 @@
             border-radius: 50%;
         }
 
-
+	.outerbox{
+		color:rgb(105,105,105);
+		height:25px;
+		width:25px;
+		border:3px solid gray;
+		background:gray;
+		border-radius:5px;
+		box-shadow:2px 2px 2px silver;
+		position:relative;
+		transition:all .2s;
+		cursor:hand;
+		margin:2px;
+		display:flex;
+		justify-content:center;
+		align-items:center;
+	}
+	.outerbox input{
+		-webkit-appearance:none;
+		float:right;
+		display:none;
+	} 
 
 
 
